Version 2.02.49 - 
================================
  Fix segment import functions to print segment name and logical volume name.
  Update vgsplit and vgcreate to call the new vg_create, then call 'set' fns.
  Change vg_create to take minimal parameters, obtain a lock, and return vg_t.
  Refactor vgchange extent_size, max_lv, max_pv, and alloc_policy for liblvm.
  Update t-vgcreate-usage.sh to test for default vg properties.
  Fix memory leak in vgsplit when re-reading the vg.
  Make exit/cleanup code more robust when some lvm init function fails.
  Use implicit set of LCK_NONBLOCK instead of explicit vg_read() flag.
  Remove unnecessary locking and existence code from new vg_read() interface.
  Permit several segment types to be registered by a single shared object.
  Update the man pages to document size units uniformly.
  Allow commandline sizes to be specified in terms of bytes and sectors.
  Update 'md_chunk_alignment' to use stripe-width to align PV data area.
  Update test/t-inconsistent-metadata.sh to match new vg_read interface.
  Add lvmcache_init() to polldaemon initialization.
  Convert tools to use new vg_read / vg_read_for_update.
  Fix segfault in vg_release when vg->cmd is NULL.

Version 2.02.48 - 30th June 2009
================================
  Abort if automatic metadata correction fails when reading VG to update it.
  Explicitly request fallback to default major number in device mapper.
  Ignore suspended devices during repair.
  Call vgreduce --removemissing automatically to fix missing PVs in dmeventd.
  Suggest using lvchange --resync when adding leg to not-yet-synced mirror.
  Destroy toolcontext on clvmd exit to avoid memory pool leaks.
  Fix lvconvert not to poll mirror if no conversion in progress.
  Fix memory leaks in toolcontext error path.
  Reinstate partial activation support in clustered mode. (2.02.40)
  Allow metadata correction even when PVs are missing.
  Use 'lvm lvresize' instead of 'lvresize' in fsadm.